# file-manager

./: Cargo.toml  README.md
src/: main.rs  upload.rs
templates/: cookies.html.tera  files.html.tera  index.html.tera
