[package]
name = "clouddle"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["tera"] }
uuid = { version = "1.3", features = ["v4"] }
